--- a/src/pages/index/home.scss
+++ b/src/pages/index/home.scss
@@ -24,23 +24,132 @@
   box-sizing: border-box;
 }
 
+// Banner
 .banner-box {
-  padding: 100rpx 20rpx 0 20rpx;
+  padding: 0 20rpx 0 20rpx;
+
+  .banner-radius {
+    border-radius: 24rpx;
+    height: 360rpx;
+  }
+
+  swiper {
+    height: 100%;
+    border-radius: 24rpx;
+  }
+
+  .banner-image {
+    width: 100%;
+    height: 360rpx;
+    display: inline-block;
+    border-radius: 24rpx;
+  }
 }
 
-.banner-radius {
-  border-radius: 24rpx;
-  height: 360rpx;
-}
+// Menu
+.list-new-box {
+  padding: 20rpx;
 
-.banner-box swiper {
-  height: 100%;
-  border-radius: 24rpx;
-}
+  .list-new-bar {
+    padding: 20rpx;
+    border-radius: 24rpx;
+    background-color: #fff;
+  }
 
-.banner-image {
-  width: 100%;
-  height: 360rpx;
-  display: inline-block;
-  border-radius: 24rpx;
+  $--menu_prefix: 'list-new-menu';
+
+  .#{$--menu_prefix}__item {
+    display: flex;
+    flex-direction: column;
+    box-sizing: border-box;
+
+    .#{$--menu_prefix}__item-tip {
+      position: absolute;
+      left: 0rpx;
+      top: 0;
+      padding: 0 10rpx;
+      font-size: 20rpx;
+      color: #fff;
+      line-height: 32rpx;
+      max-width: 150rpx;
+      text-overflow: ellipsis;
+      word-break: keep-all;
+      overflow: hidden;
+      background-size: 100% 100%;
+      background-position: center center;
+    }
+  }
+
+  .#{$--menu_prefix} {
+    display: flex;
+    box-sizing: border-box;
+    position: relative;
+    margin-bottom: 6rpx;
+    border-top-left-radius: 8rpx;
+
+    .#{$--menu_prefix}__item {
+      width: 100%;
+      height: 100%;
+      padding-top: 60rpx;
+    }
+  }
+
+  .#{$--menu_prefix}__left {
+    width: 444rpx;
+    height: 220rpx;
+    margin-right: 10rpx;
+
+    .#{$--menu_prefix}__item{
+      padding-left: 40rpx;
+      border-radius: 8rpx;
+      background-size: 100% 100%;
+      background-position: center center;
+    }
+  }
+
+  .#{$--menu_prefix}__right {
+    width: 216rpx;
+
+    .#{$--menu_prefix}__item{
+      
+      text-align: center;
+      border-radius: 8rpx;
+      background-size: 100% 100%;
+      background-position: center center;
+    }
+  }
+
+  .#{$--menu_prefix}-more {
+    display: flex;
+    justify-content: space-between;
+    margin-top: 10rpx;
+
+    .#{$--menu_prefix}-more__item {
+      width: 216rpx;
+      height: 210rpx;
+    }
+
+    .#{$--menu_prefix}__item{
+      width: 100%;
+      height: 100%;
+      padding-top: 58rpx;
+      text-align: center;
+      border-radius: 8rpx;
+      background-size: 100% 100%;
+      background-position: center center;
+    }
+  }
+
+  .#{$--menu_prefix}__item-title {
+    font-size: 34rpx;
+    color: #333;
+    font-family: PingFangSC-Regular;
+    line-height: 40rpx;
+  }
+
+  .#{$--menu_prefix}__item-subtitle {
+    font-size: 16rpx;
+    color: #666666;
+  }
+  
 }
