--- a/src/assets/scss/_utilities.scss
+++ b/src/assets/scss/_utilities.scss
@@ -1,6 +1,9 @@
 @import "utilities/borders";
 @import "utilities/display";
+@import "utilities/flex";
 @import "utilities/overflow";
 @import "utilities/position";
 @import "utilities/spacing";
 @import "utilities/animation";
+@import "utilities/text";
+
