--- a/src/pages/index/menu.scss
+++ b/src/pages/index/menu.scss
@@ -38,7 +38,7 @@
 
 .address-section {
   padding-top: 35rpx;
-  padding-bottom: 50rpx;
+  padding-bottom: 40rpx;
 
   .at-icon {
     margin-left: 30rpx;
@@ -132,6 +132,7 @@
 
 .product-view {
   flex: auto;
+  padding-top: 20rpx;
 }
 
 .product-content {
