--- a/src/components/empty-list/index.scss
+++ b/src/components/empty-list/index.scss
@@ -21,8 +21,8 @@
     font-size: 28rpx;
     margin: 0rpx auto;
     background-color: #6d86c4;
-    height: 10;
     line-height: 80rpx;
     letter-spacing: 4rpx;
+    border: 0;
   }
 }
