--- a/src/components/segmented-control/index.scss
+++ b/src/components/segmented-control/index.scss
@@ -1,6 +1,7 @@
 .at-segmented-control {
   background: #6d86c4;
   border-radius: 32rpx;
+  height: 63rpx;
 }
 
 .at-segmented-control__item {
@@ -9,12 +10,15 @@
   position: relative;
   padding: 2rpx;
   background-color: #6d86c4;
+  height: 100%;
 }
 
 .at-segmented-control__item-text {
   padding: 10rpx 0;
   border-radius: 32rpx;
   transition: all .3s;
+  height: 100%;
+  box-sizing: border-box;
 }
 
 .at-segmented-control__item--active {
