--- a/src/pages/index/cart.scss
+++ b/src/pages/index/cart.scss
@@ -21,7 +21,7 @@ page {
     background-color: #fff;
     font-size: 26rpx;
     color: #7ca7d2;
-    border: 1px solid #7ca7d2;
+    border: 2rpx solid #7ca7d2;
     border-radius: 6rpx;
     text-align: center;
     height: 66rpx;
